# usvfs-fuse

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  linting.yml
cmake/: config.cmake.in
include/usvfs-fuse/: fdmap.h  logger.h  logging.h  mountstate.h  usvfs.h  usvfsmanager.h  utils.h  virtualfiletreeitem.h
include/usvfs_fuse/: fdmap.h  usvfs_version.h  usvfsmanager.h
src/: CMakeLists.txt  fdmap.cpp  logger.h  loghelpers.cpp  loghelpers.h  mountstate.cpp  pch.h  usvfs.cpp  usvfs.h  usvfsmanager.cpp  utils.cpp  utils.h  virtualfiletreeitem.cpp  virtualfiletreeitem.h
tests/: CMakeLists.txt
tests/performance/: CMakeLists.txt  README.md  benchmark_utils.h  filetree.cpp  usvfs.cpp  utils.cpp
tests/unit/: CMakeLists.txt  filetree.cpp  usvfs.cpp  utils.cpp
